tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_nested_array_failure/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 4 is out of bounds for the array of length 2
  ┌─ src/main.nr:2:5
  │
2 │     a[i][0]
  │     ----
  │

Error interpreting main function
